css/main.css
/* colores used
  dark backgrounds: #232323
  titledivs: #00A388
  buttons: #014ed4
  #f4f4f4ad
  #f0cc00
  #014ed4
*/
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  font-family: 'Roboto', sans-serif;
  font-family: 'Montserrat', sans-serif;
  color: #313131;
  word-spacing: 2px;
  box-sizing: border-box;
}
*{
  transition: all 0.3s ease;
}
h1{
  letter-spacing: 2px;
}
h2 {
  letter-spacing: 1.5px;
}
h4,
h5,
h6{
  letter-spacing: 1px;
}
h3{
  letter-spacing: 1.2px;
}
h6{
  letter-spacing: 1px;
}
p{
  letter-spacing: 1px;
}
.bg-blues {
  background-color: #f2f7f8;
}
.credits {
  font-size: 0.7rem; 
  position: absolute; 
  bottom: 0;
  color: #f4f4f4;
}
.credits a{
  color: rgb(82, 192, 255);
}
/*===== Home page starts Home page starts Home page starts Home page starts Home page starts Home page starts */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}
.row{
  margin: 0;
  padding: 0;
}

/* header stars */
header {
  height: 100vh;
}

.centered {
  display: flex;
  justify-content: center;
  align-items: center;
}

.topHeader {
  background-color: #f2f7f8;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
  border-bottom: 1px solid #eeeeee;
  padding: 0;
}

.topHeader a {
  text-decoration: none;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

.contactItem {
  color: #1a1a1a;
  font-size: 1rem;
}

.contactItem:hover {
  color: #2a2a2a;
}

.contactFooter {
  color: silver;
}

nav {
  background: #ffffff;
  border-bottom: 1px solid silver;
  border-right: 1px solid silver;
}

.nav-link {
  font-size: 1rem;
  margin: 0 20px;
}
.socialMediaNavbar i {
  color: #1d1f33;
}

.navbar-toggler {
  border: none;
}

.socialMediaNavbar {
  display: none;
}
.dropdown-menu {
  border: none;
}

/* header ends */
/* footer starts */
.topFooter {
  background: #1d1f33;
  color: #f4f4f4;
}

.bottomFooter {
  background: #131422;
  color: #7a7a7af1;
  font-size: 0.9rem;
}

.socialMedia a {
  color: #f4f4f4ad;
  font-size: 25px;
}
.address h6 {
  font-size: 1.2rem;
}
.address p{
  font-size: 0.9rem;
}
@media only screen and (max-width: 900px){
  .bottomFooter{
    font-size: 0.7rem;
  }
}

/* footer ends */

/* Carosel starts */
.banner {
  height: 80vh;
  width: 100%;
}
.banner1 {
  background-image: url(../assets/images/twoWheel.jpg);
  /*background-image: url(../assets/images/iot.jpg);*/
  background-size: cover;
} 
.banner2{
  background-image: url(../assets/images/embedded.jpg);
  background-size: cover;
}
.banner3 {
  background-image: url(../assets/images/vehicle.jpg);
  background-size: cover;
} 

.banner4 {
  background-image: url(../assets/images/iot.jpg);
  /*background-image: url(../assets/images/twoWheel.jpg);*/
  background-size: cover;
}
.carousel-indicators li {
  width: 10px;
  height: 10px;
  border-radius: 100%;
}

.carousel-control-prev,
.carousel-control-next {
  opacity: 0.3;
}

.carousel-caption h2 {
  line-height: 1.3;
  text-align: left;
  box-sizing: border-box;
  width: 600px;
  height: 300px;
  padding: 20px 40px;
  background: hsla(235, 28%, 16%, 0.8);
}
.c-indicators{
  margin: 0;
}
.c-indicators li {
  border-radius: 0;
  width: 250px;
  padding: 15px;
  margin: 0px 100px 20px 100px;
  background: transparent;
  border: 2px solid #f4f4f4;
  color: #f4f4f4;
  text-align: center;
  text-indent: 0;
}

@media only screen and (max-width: 900px) {
  .carousel-caption h2{
    font-size: 1rem;
    height: 200px;
    width: 250px;
    padding: 10px 20px;
    box-sizing: border-box;
  }
  .c-indicators {
    margin-bottom: 10px;
  }
  .c-indicators li {
    margin: 4px;
    border: 1px solid #f4f4f4;
    color: #f4f4f4;
    text-align: center;
    text-indent: 0;
    font-size: 0.6rem;
    padding: 15px 20px;
    width: 200px;
    height: 5px;
  }
}
@media only screen and (max-width: 420px) {
  .c-indicators li {
    margin: 4px;
    border: 1px solid #f4f4f4;
    color: #f4f4f4;
    text-align: center;
    text-indent: 0;
    font-size: 0.4rem;
    padding: 15px 20px;
    width: 180px;
    height: 5px;
  }
}

/*carousel fade effect*/
.carousel-fade>.carousel-control {
  z-index: 2;
}
.carousel-fade>.carousel-inner>.carousel-item{
  transition-property: opacity;

}
.carousel-fade>.carousel-inner>.item,
.active.left,
.active.right {
    opacity: 0;
}
.carousel-fade>.carousel-inner>.active,
        .next.left,
        .prev.right {
            opacity: 1;
        }
.carousel-fade>.carousel-inner>.next,
.prev,
.active.left,
.active.right {
      left: 0;
      transform: translate3d(0, 0, 0);
  }

/* carousel ends */

/*About us section starts*/


.about p{
  font-size: 1.4rem;
  font-weight: 500;
}
.about img{
  width: 420px;
  transform: rotate(180deg);
}
@media only screen and (max-width: 800px) {
  .about p{
    font-size: 1.2rem;
    font-weight: 500;
  }
}
/*About us section ends*/

/* our attitude section starts */

.attitude{
  background-color: #f2f7f8;
  text-align: center;  
}

.holder {
  position: relative;
  height: 420px;
  width: 350px;
  overflow: hidden;
  box-shadow: 1px 2px 10px rgba(88, 88, 88, 0.5);
  transition: box-shadow 0.3s ease-out;
}

.holder:hover {
  box-shadow: 1px 2px 10px rgba(170, 170, 170, 0.5);
}

.img-holder {
  background-color: #000;
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: transform 0.3s ease-out;
  z-index: 2;
}
.img-holder1{
  background-image: url(../assets/images/strategy.jpg);
}
.img-holder2{
  background-image: url(../assets/images/values.jpg);
}
.img-holder3{
  background-image: url(../assets/images/vision.jpg);
}
/* ... */

